# structure-conditional-mbr

./: .gitignore  DATA_LICENSE  LICENSE  README.md  pyproject.toml
scmbr/: bertscore.py  bleurt.py  cluster.py  compute_utility.py  datasets.py  evaluate_structural_optimality.py  generate.py  mbr.py  structural_optimality.py  train.py  utils.py
